add footer and give style to footer

--- a/block-BHaacs/stylesheet/style.css
+++ b/block-BHaacs/stylesheet/style.css
@@ -521,3 +521,32 @@ h4 + p {
   font-size: 1.8rem;
   font-weight: 400;
 }
+
+/* footer */
+footer {
+  margin: 2rem 0;
+}
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 1.1rem;
+  border-radius: 50%;
+  background: var(--primary);
+  color: #fff;
+  margin-right: 1rem;
+}
+
+footer ul {
+  flex: 0 1 23%;
+}
+footer p {
+  margin-bottom: 1rem;
+  color: var(--secondary-text-color);
+}
+.align-start {
+  align-items: flex-start;
+}
